[gd_scene load_steps=14 format=2]

[ext_resource path="res://features/intro/scripts/settings.gd" type="Script" id=1]
[ext_resource path="res://features/intro/themes/ft_menu_button.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/fonts/ubuntu/ubuntu-regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/fonts/ubuntu/ubuntu-medium.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=10]
size = 18
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 22
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 3 )

[node name="settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="content" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0

[node name="grid" type="GridContainer" parent="content"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 24

[node name="navigation" type="HBoxContainer" parent="content/grid"]
margin_right = 912.0
margin_bottom = 27.0
size_flags_horizontal = 3
custom_constants/separation = 8

[node name="button_previous" type="Button" parent="content/grid/navigation"]
margin_right = 50.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 10 )
text = "Back"

[node name="title" type="Label" parent="content/grid/navigation"]
margin_left = 58.0
margin_right = 158.0
margin_bottom = 26.0
custom_fonts/font = SubResource( 1 )
text = "Settings"
uppercase = true

[node name="hmenu" type="HBoxContainer" parent="content/grid"]
margin_top = 51.0
margin_right = 912.0
margin_bottom = 78.0
size_flags_horizontal = 3
custom_constants/separation = 2

[node name="button_video" type="Button" parent="content/grid/hmenu"]
margin_right = 61.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Video"

[node name="button_audio" type="Button" parent="content/grid/hmenu"]
margin_left = 63.0
margin_right = 125.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "Audio"

[node name="container" type="TabContainer" parent="content/grid"]
margin_top = 102.0
margin_right = 912.0
margin_bottom = 492.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
custom_styles/tab_fg = SubResource( 7 )
custom_styles/tab_disabled = SubResource( 8 )
custom_styles/tab_bg = SubResource( 9 )
custom_styles/panel = SubResource( 4 )
tabs_visible = false

[node name="video" type="Tabs" parent="content/grid/container"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="grid_video" type="GridContainer" parent="content/grid/container/video"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="hbox_display_fps" type="HBoxContainer" parent="content/grid/container/video/grid_video"]
margin_right = 888.0
margin_bottom = 29.0
size_flags_horizontal = 3

[node name="button_display_fps" type="ToolButton" parent="content/grid/container/video/grid_video/hbox_display_fps"]
margin_right = 888.0
margin_bottom = 29.0
focus_previous = NodePath("../../..")
size_flags_horizontal = 3
custom_fonts/font = SubResource( 3 )
text = "Display FPS"
align = 0

[node name="check_box" type="CheckBox" parent="content/grid/container/video/grid_video/hbox_display_fps/button_display_fps"]
margin_left = 856.0
margin_right = 880.0
margin_bottom = 29.0
size_flags_horizontal = 10
disabled = true

[node name="audio" type="Tabs" parent="content/grid/container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="grid_audio" type="GridContainer" parent="content/grid/container/audio"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 12.0
margin_right = -12.0
margin_bottom = -12.0

[node name="label" type="Label" parent="content/grid/container/audio/grid_audio"]
margin_right = 115.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 6 )
text = "Available soon..."

[connection signal="pressed" from="content/grid/navigation/button_previous" to="." method="_on_button_previous_pressed"]
[connection signal="pressed" from="content/grid/hmenu/button_video" to="." method="_on_button_video_pressed"]
[connection signal="pressed" from="content/grid/hmenu/button_audio" to="." method="_on_button_audio_pressed"]
[connection signal="pressed" from="content/grid/container/video/grid_video/hbox_display_fps/button_display_fps" to="." method="_on_button_display_fps_pressed"]
